[gd_scene load_steps=4 format=3 uid="uid://f3e56gmyhgsm"]

[ext_resource type="Script" path="res://scripts/item.gd" id="1_o77w5"]
[ext_resource type="PackedScene" uid="uid://d1ij3la6jj4na" path="res://scenes/entities/inventory/tile_collider_clickable.tscn" id="2_6j74d"]
[ext_resource type="Texture2D" uid="uid://c7xtsk2h5113w" path="res://assets/textures/items/coin.png" id="3_usjdf"]

[node name="coin" type="Node2D"]
z_index = 6
script = ExtResource("1_o77w5")
itemId = "coin"
itemDurability = 3

[node name="Tile4" parent="." instance=ExtResource("2_6j74d")]
z_index = 8
position = Vector2(50.5, 50)

[node name="ItemSprite" type="Sprite2D" parent="."]
position = Vector2(51.5, 52)
texture = ExtResource("3_usjdf")

[node name="DegradedSprite" type="Sprite2D" parent="ItemSprite"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("3_usjdf")

[node name="SelectedSprite" type="Sprite2D" parent="ItemSprite"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("3_usjdf")
